@@ -1,6 +1,6 @@
 /*
   direcotry -- handle directory cache
-  Copyright (C) 1996, 1997, 1998 Dieter Baron
+  Copyright (C) 1996, 1997, 1998, 1999 Dieter Baron
 
   This file is part of cftp, a fullscreen ftp client
   The author can be contacted at <dillo@giga.or.at>
